fix overflow block

--- a/css/commponents/_cards-info.scss
+++ b/css/commponents/_cards-info.scss
@@ -209,6 +209,12 @@
   margin-bottom: 50px;
   transition: all 500ms ease;
 }
+.size-opt__wrapper{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
 @media (max-width: 1000px) {
   .product-card-container {
     padding: 0px 15px;
@@ -273,6 +279,21 @@
   }
   .cards-info {
     padding: 0px 15px;
+    width: 100%;
+    &__sizes{
+      max-width: 100%;
+      width: 100%;
+      overflow-x: auto;
+    }
+    .size-opt{
+      & > * {
+        flex-shrink: 0;
+      }
+      &__wrapper{
+        width: max-content;
+      }
+    }
+
   }
 }
 
